docs: ✏️ routes/posts 修正 '/' swagger註解
